# lifetime_extension

./: README.md
lifetime_extension/: .~lock.Unirradiated, Surveillance and Re-Irradiated Data.xls#  LifetimeExtension.ipynb  Unirradiated, Surveillance and Re-Irradiated Data.xls  Untitled.ipynb  _dispy_20180411133655  _dispy_20180411133840  _dispy_20180411134043  pyproject.toml  report.aux  report.fdb_latexmk  report.fls  report.out  report.tex
lifetime_extension/.ipynb_checkpoints/: LifetimeExtension-checkpoint.ipynb  Untitled-checkpoint.ipynb  report-checkpoint.tex
lifetime_extension/_minted-report/: 3A69CC926E25C90473EAB2A8997F6B8D05FFE88EF49F9DF4C1FDAA71404346DB.pygtex  5C4DD899789749DDE58B6244FD6A494405FFE88EF49F9DF4C1FDAA71404346DB.pygtex  810BC5ECDB9382C4AB90B7CC6222ED657C2E7F49E087B8E8E8DF5244CE287E39.pygtex  A715B599D12C9C33C4FD640A963DBD2105FFE88EF49F9DF4C1FDAA71404346DB.pygtex
lifetime_extension/tests/: test_lifetime_extension.py
