[tool.poetry]
name = "lifetime_extension"
version = "0.1.0"
description = ""
authors = ["Angus Hollands <goosey15@gmail.com>"]

[tool.poetry.dependencies]
python = "*"
jupyter = "^1.0"
bokeh = "^0.12.15"
numpy = "^1.14"
scipy = "^1.0"
pandas = "^0.22.0"
xlrd = "^1.1"
selenium = "^3.11"
dispy = "^4.8"
pycos = "^4.6"
matplotlib = "^2.2"

[tool.poetry.dev-dependencies]
